# decasaalcole-data

./: .env  .gitignore  Dockerfile  README.md  datallinks.rst  docker-compose.yml  get_data.py  pyproject.toml  registre.ods  requirements.txt  sample.env  tra_data.py
data/: README.md
notebooks/: 00_get_data.ipynb  01_calculate_CP_layer.ipynb  settings.py
postcodes/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
postcodes/dcac_postcodes/: cli.py  compute_centroids.py  extract_postcodes.py  process.py
postcodes/src/: cli.py  compute_centroids.py  config.py  download.py  extract_postcodes.py  main.py  process.py
raw/: registre.ods
schools/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
schools/src/: scraper.py
src/: main.py  scraper.py
traveltimes/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  travel_times.dockerfile
traveltimes/scripts/: prepare.sh  travel_times.py
