[tool.poetry]
name = "decasaalcole-data"
version = "0.2"
description = "Data processing for DeCasaAlCole"
authors = ["Pedro Ferrer <vehrka@gmail.com>"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.8"
pyosrm = "^0.0.2"
osmnx = "^1.1.1"
geopandas = "^0.9.0"
pandas = "^1.3.1"
cartoframes = "^1.2.2"
numpy = "^1.21.1"
jupyterlab = "^3.1.1"
pandas-ods-reader = "^0.0.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
