[project]
name = "dcac-travel-times"
version = "0.1.0"
description = "Computes travel times between postcodes using the OSRM API. Check the README for more details."
authors = [
    { name = "Jorge Sanz", email = "jorge@jorgesanz.net"}
]
license = { text = "GPL" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
]
